--- a/pages/home/index.wxml
+++ b/pages/home/index.wxml
@@ -1,2 +1,9 @@
 <!--pages/home/index.wxml-->
-<text>pages/home/index.wxml</text>
+<view class="app-container">
+  <custom-nav-bar placeholder="{{true}}" customStyle="background: rgba(255, 255, 255, 1)" isSlot="{{true}}">
+    <view class="navbar">我是自定义navbar的插槽内容</view>
+  </custom-nav-bar>
+  <view class="content">
+    <view wx:for="{{10}}" wx:key="index" style="height: 200rpx; padding-bottom: 40rpx">内容-{{index}}</view>
+  </view>
+</view>
