--- a/components/custom-nav-bar/index.scss
+++ b/components/custom-nav-bar/index.scss
@@ -6,8 +6,7 @@
     height: 100%;
     .home,
     .back,
-    .close,
-    .solt {
+    .close {
       display: flex;
       align-items: center;
       height: 100%;
