--- a/pages/goods/index.wxml
+++ b/pages/goods/index.wxml
@@ -4,7 +4,7 @@
     placeholder="{{true}}"
     fixed="{{false}}"
     customStyle="background: rgba(255, 255, 255, 0)"
-    isSlot="{{true}}"
+    showSlot="{{true}}"
   >
     <view class="custom-navbar">
       <view>自定义navbar</view>
