--- a/pages/message/index.wxml
+++ b/pages/message/index.wxml
@@ -1,6 +1,6 @@
 <!--pages/message/index.wxml-->
 <view class="app-container">
-  <custom-nav-bar placeholder="{{false}}" customStyle="background: rgba(255, 255, 255, 0)" isSlot="{{true}}">
+  <custom-nav-bar placeholder="{{false}}" customStyle="background: rgba(255, 255, 255, 0)" showSlot="{{true}}">
     <view class="navbar">自定义navbar</view>
   </custom-nav-bar>
   <view class="content">
