--- a/pages/home/index.wxml
+++ b/pages/home/index.wxml
@@ -1,12 +1,6 @@
 <!--pages/home/index.wxml-->
 <view class="app-container">
-  <custom-nav-bar
-    placeholder="{{true}}"
-    customStyle="background: rgba(255, 255, 255, 1)"
-    showSlot="{{true}}"
-    title="我是标题我是标题我是标题我是标题我是标题我是标题我是标题"
-  >
-    <view class="navbar">自定义navbar</view>
+  <custom-nav-bar placeholder="{{true}}" customStyle="background: rgba(255, 255, 255, 1)" title="MiniProgram-Template">
   </custom-nav-bar>
-  <view class="content"> </view>
+  <custom-rich-text content="{{content}}" markdown="{{true}}" />
 </view>
