--- a/components/custom-broken-network/index.scss
+++ b/components/custom-broken-network/index.scss
@@ -1,5 +1,5 @@
 /* components/custom-broken-network/index.wxss */
-.custom-broken-network {
+.custom-broken-network-vertical-center {
   position: fixed;
   top: 50%;
   left: 50%;
@@ -8,18 +8,16 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+}
 
-  .title-wrapper {
-    text-align: center;
-    .subtitle {
-      padding-top: 20rpx;
-    }
-  }
+.message {
+  text-align: center;
+  line-height: 40rpx;
+}
 
-  .refresh {
-    padding-top: 60rpx;
-    .custom-refresh {
-      width: 240rpx;
-    }
+.refresh {
+  margin-top: 40rpx;
+  .custom-refresh {
+    width: 240rpx;
   }
 }
