feat:进阶封装custom-broken-network

--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -20,3 +20,7 @@ text {
 ::-webkit-scrollbar {
   display: none;
 }
+
+.safeAreaInsetBottom {
+  padding-bottom: calc(env(safe-area-inset-bottom));
+}
