--- a/components/custom-broken-network/index.wxml
+++ b/components/custom-broken-network/index.wxml
@@ -1,6 +1,6 @@
 <!--components/custom-broken-network/index.wxml-->
 <view
-  style="width: {{systemInfo.screenWidth}}px; height: {{systemInfo.screenHeight}}px;"
+  style="width: {{ verticalCenter ? systemInfo.screenWidth + 'px' : 'auto'}}; height: {{ verticalCenter ? systemInfo.screenHeight + 'px' : 'auto'}};"
   class="{{verticalCenter ? 'custom-broken-network-vertical-center' : ''}} external-custom-broken-network"
 >
   <view class="message external-custom-broken-network_message">
@@ -8,7 +8,7 @@
   </view>
   <view class="refresh external-custom-broken-network_refresh">
     <van-button catchtap="handleRefresh" block square plain type="primary" custom-class="custom-refresh"
-      >刷新</van-button
+      >{{buttonText}}</van-button
     >
   </view>
 </view>
