--- a/packageA/pages/broken-network/index.wxml
+++ b/packageA/pages/broken-network/index.wxml
@@ -1,6 +1,43 @@
 <!--packageA/pages/broken-network/index.wxml-->
-<view class="app-container">
-  <custom-nav-bar isBack="{{true}}" placeholder="{{true}}" customStyle="background: #f4f5f5" title="{{title}}" />
-  <view class="introduce">默认垂直居中展示</view>
-  <custom-broken-network verticalCenter="{{false}}" external-custom-broken-network="external-custom-broken-network" />
+<view class="app-container safeAreaInsetBottom">
+  <custom-nav-bar showBack="{{true}}" placeholder="{{true}}" customStyle="background: #f4f5f5" title="{{title}}" />
+  <view class="title">API</view>
+  <custom-rich-text content="{{content}}" markdown="{{true}}" />
+  <view class="title">演示</view>
+  <view class="demo-list">
+    <view class="demo-item">
+      <view class="demo-item-label">内容</view>
+      <view class="demo-item-value">
+        <van-field
+          value="{{ message }}"
+          border="{{ false }}"
+          bind:change="handleMessageChange"
+          input-align="right"
+          custom-style="padding: 0;"
+        />
+      </view>
+    </view>
+    <view class="demo-item">
+      <view class="demo-item-label">按钮文案</view>
+      <view class="demo-item-value">
+        <van-field
+          value="{{ buttonText }}"
+          border="{{ false }}"
+          bind:change="handleButtonTextChange"
+          input-align="right"
+          custom-style="padding: 0;"
+        />
+      </view>
+    </view>
+    <view class="demo-item">
+      <view class="demo-item-label">基于屏幕垂直居中布局</view>
+      <van-checkbox value="{{ verticalCenter }}" bind:change="handleVerticalCenterChange" custom-style="padding: 0;" />
+    </view>
+  </view>
+  <custom-broken-network
+    message="{{message}}"
+    buttonText="{{buttonText}}"
+    verticalCenter="{{verticalCenter}}"
+    external-custom-broken-network="external-custom-broken-network"
+  />
 </view>
