feat:新增image组件描述页面，相关UI、逻辑调整

--- a/components/custom-image/index.scss
+++ b/components/custom-image/index.scss
@@ -7,8 +7,7 @@
   overflow: hidden;
 }
 .custom-image--round {
-  border-radius: 50%;
-  overflow: hidden;
+  border-radius: 50% !important;
 }
 .custom-image--round .custom-image__img {
   border-radius: inherit;
