feat:新增视频组件，图片组件样式调整，wxs工具类调整

--- a/components/custom-iconfont/index.wxml
+++ b/components/custom-iconfont/index.wxml
@@ -3,5 +3,5 @@
 
 <view
   class="iconfont {{icon}} external-custom-iconfont"
-  style="font-size: {{computed.addUnit(size)}}; color: {{color}};"
+  style="font-size: {{computed.addRpxUnit(size)}}; color: {{color}};"
 />
