--- a/components/custom-video/index.scss
+++ b/components/custom-video/index.scss
@@ -20,8 +20,63 @@
     background-color: rgba(0, 0, 0, 0.7);
   }
 
-  .poster-wrapper {
+  .bottom-right-function-wrapper {
     z-index: 9;
+    position: absolute;
+    right: 0;
+    bottom: 0;
+
+    .full-screen-icon-wrapper {
+      padding: 20rpx;
+    }
+
+    .muted-icon-wrapper {
+      padding: 20rpx;
+    }
+  }
+
+  .play-icon-wrapper {
+    z-index: 8;
+    position: absolute;
+    left: 0;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .pause-wrapper {
+    z-index: 8;
+    position: absolute;
+    left: 0;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    width: 100%;
+    height: 100%;
+  }
+
+  .progress-wrapper {
+    z-index: 8;
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    height: 4rpx;
+    background-color: #d8d8d8;
+
+    .progress {
+      height: 100%;
+      background-color: #031c24;
+    }
+  }
+
+  .poster-wrapper {
+    z-index: 7;
     position: absolute;
     left: 0;
     top: 0;
