--- a/components/custom-video/index.wxml
+++ b/components/custom-video/index.wxml
@@ -2,28 +2,71 @@
 <wxs src="/utils/wxs.wxs" module="computed" />
 
 <view style="width: {{computed.addRpxUnit(width)}}; height: {{computed.addRpxUnit(height)}};" class="custom-video">
+  <!-- 初始化视频加载样式 -->
   <view wx:if="{{init_load}}" class="init-load-wrapper">
     <van-loading size="48rpx" vertical>加载中...</van-loading>
   </view>
+  <!-- 右下角功能区域 -->
+  <view wx:if="{{buffered_status}}" class="bottom-right-function-wrapper">
+    <!-- 静音icon -->
+    <view wx:if="{{showMuted}}" class="muted-icon-wrapper">
+      <custom-image
+        catchtap="handleMuted"
+        src="{{mutedStatus ? mutedIcon : unMutedIcon}}"
+        width="{{mutedIconSize}}"
+        height="{{mutedIconSize}}"
+        showLoading="{{false}}"
+      />
+    </view>
+    <!-- 全屏icon -->
+    <view wx:if="{{showFullScreen}}" class="full-screen-icon-wrapper">
+      <custom-image
+        catchtap="handleFullScreen"
+        src="{{fullScreenIcon}}"
+        width="{{fullScreenIconSize}}"
+        height="{{fullScreenIconSize}}"
+        showLoading="{{false}}"
+      />
+    </view>
+  </view>
+  <!-- 播放icon -->
+  <custom-image
+    wx:if="{{show_play}}"
+    catchtap="handlePlay"
+    src="{{playIcon}}"
+    width="{{playIconSize}}"
+    height="{{playIconSize}}"
+    showLoading="{{false}}"
+    class="play-icon-wrapper"
+  />
+  <!-- 播放进度条 -->
+  <view wx:if="{{buffered_status}}" class="progress-wrapper">
+    <view style="width: {{percentage}};" class="progress"></view>
+  </view>
+  <!-- 暂停遮罩层 -->
+  <view wx:if="{{!show_play}}" catchtap="handlePause" class="pause-wrapper"></view>
+  <!-- 封面图 -->
   <custom-image wx:if="{{show_placeholder}}" src="{{poster}}" class="poster-wrapper" />
+  <!-- 视频组件 -->
   <video
     wx:if="{{show_video}}"
-    bindplay="play"
-    bindpause="pause"
-    binderror="error"
-    bindended="ended"
-    bindtimeupdate="timeupdate"
-    bindfullscreenchange="fullscreenchange"
-    bindloadedmetadata="loadedmetadata"
-    bindprogress="progress"
-    src="{{videoSrc}}"
+    bindplay="onPlay"
+    bindpause="onPause"
+    binderror="onError"
+    bindended="onEnded"
+    bindtimeupdate="onTimeupdate"
+    bindfullscreenchange="onFullscreenchange"
+    bindloadedmetadata="onLoadedmetadata"
+    bindprogress="onProgress"
+    src="{{src}}"
     object-fit="{{object_fit}}"
-    muted="{{muted}}"
-    show-progress="{{isFullScreen}}"
-    show-play-btn="{{isFullScreen}}"
-    show-fullscreen-btn="{{isFullScreen}}"
+    muted="{{mutedStatus}}"
+    show-progress="{{is_full_screen}}"
+    show-play-btn="{{is_full_screen}}"
+    show-fullscreen-btn="{{is_full_screen}}"
     show-center-play-btn="{{false}}"
     loop="{{loop}}"
     class="video-wrapper"
+    id="{{id}}"
   />
 </view>
