fix:视频组件单例模式

--- a/components/custom-video/index.scss
+++ b/components/custom-video/index.scss
@@ -4,6 +4,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  background-color: #f7f8fa;
 
   .init-load-wrapper {
     z-index: 10;
