--- a/packageA/pages/readme/index.wxml
+++ b/packageA/pages/readme/index.wxml
@@ -3,7 +3,7 @@
   <custom-nav-bar showBack="{{true}}" placeholder="{{true}}" customStyle="background: #f4f5f5" title="{{title}}" />
   <custom-broken-network wx:if="{{brokenNetwork}}" bindhandleRefresh="refresh" verticalCenter="{{true}}" />
   <block wx:if="{{!brokenNetwork && readmeContent}}">
-    <custom-rich-text content="{{readmeContent}}" markdown="{{true}}" />
+    <custom-rich-text content="{{readmeContent}}" />
   </block>
 </view>
 
