--- a/packageA/pages/virtuali-list/index.wxml
+++ b/packageA/pages/virtuali-list/index.wxml
@@ -6,7 +6,13 @@
     <!-- <view class="title">API</view>
 		<custom-rich-text content="{{readmeContent}}" />
 		<view class="title">演示</view> -->
-    <custom-virtuali-list virtualiList="{{goods}}" generic:selectable="my-goods" external-list-wrapper="goods-list" />
+    <custom-virtuali-list
+      virtualiList="{{goodsInfo.data}}"
+      generic:selectable="my-goods"
+      external-list-wrapper="goods-list"
+    />
+    <custom-nomore wx:if="{{goodsInfo.nomore}}" />
+    <custom-more wx:if="{{goodsInfo.lowerLoading}}" />
   </block>
 </view>
 
