--- a/packageA/pages/video/index.scss
+++ b/packageA/pages/video/index.scss
@@ -7,9 +7,15 @@ page {
       font-weight: 500;
     }
 
-    .tips {
-      padding: 0 40rpx;
-      line-height: 40rpx;
+    .midline {
+      z-index: 99;
+      position: fixed;
+      left: 0;
+      top: 50%;
+      transform: translateY(-100%);
+      height: 4rpx;
+      width: 100vw;
+      background-color: red;
     }
   }
 }
