fix:修复视频id导致获取不到视频dom,优化赋值

--- a/components/custom-video/index.scss
+++ b/components/custom-video/index.scss
@@ -4,6 +4,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  margin: 0 auto;
   background-color: #f7f8fa;
 
   .init-load-wrapper {
