--- a/components/custom-video/index.wxml
+++ b/components/custom-video/index.wxml
@@ -44,7 +44,6 @@
       showLoading="{{false}}"
     />
   </view>
-
   <!-- 播放进度条 -->
   <view wx:if="{{buffered_status}}" class="progress-wrapper">
     <view style="width: {{percentage}};" class="progress"></view>
@@ -52,7 +51,7 @@
   <!-- 暂停遮罩层 -->
   <view wx:if="{{!show_play}}" catchtap="handlePause" class="pause-wrapper"></view>
   <!-- 封面图 -->
-  <custom-image src="{{poster}}" class="poster-wrapper" style="left: {{show_placeholder ? 0 : '-100%'}}" />
+  <custom-image src="{{poster}}" class="poster-wrapper" style="left: {{show_placeholder ? 0 : '-100vw'}}" />
   <!-- 视频组件 -->
   <video
     wx:if="{{show_video}}"
@@ -75,4 +74,5 @@
     class="video-wrapper"
     id="{{id}}"
   />
+  <slot />
 </view>
