--- a/packageA/pages/video/index.wxml
+++ b/packageA/pages/video/index.wxml
@@ -7,6 +7,13 @@
     <custom-rich-text content="{{readmeContent}}" />
     <view class="title">演示</view>
     <view class="midline"></view>
+    <custom-video
+      autoplay="{{false}}"
+      width="100vw"
+      height="100vw"
+      poster="https://oss.fabrique.cn/67a44967-32f3-4fa8-9481-ceb7a8fde958.mp4?x-oss-process=video/snapshot,t_0,f_jpg,w_0,h_0,m_fast,ar_auto"
+      src="https://oss.fabrique.cn/offwebsite/mp4/%E6%B7%B7%E5%89%AA6-%E6%94%B9%E5%AD%97%E4%BD%93.mp4"
+    />
     <block wx:for="{{videoList}}" wx:key="index">
       <custom-video autoplay="{{false}}" width="100vw" height="100vw" poster="{{item.poster}}" src="{{item.src}}" />
     </block>
